# gaugid-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: INTERNAL_CONTENT_POLICY.md  OPEN_SOURCE_CHECKLIST.md  VERSIONING.md  gaugid-sdk-integration.md  index.md  pyproject.toml
docs/assets/: mermaid-dark-mode.css  mermaid-init.js
docs/guides/: protocol-compliance.md
docs/proposals/: CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  SUMMARY.md  memory-types-protocol-extension.md
docs/tutorials/: overview.md
docs/tutorials/frameworks/: README.md  anthropic.md  crewai.md  gemini.md  google-adk.md  langchain.md  langgraph.md  openai-assistants.md
examples/: README.md  quickstart.py
examples/cross-agent-demo/: README.md  agent_assistant.py  agent_food.py  agent_travel.py  demo_config.py  demo_runner.py
examples/frameworks/: README.md  README_GAUGID_MEMORY.md  agno_gaugid_example.py  anthropic_example.py  anthropic_memory_tool_example.py  crewai_example.py  gaugid_memory_service.py  gemini_example.py  google_adk_example.py  google_adk_with_gaugid_memory.py  langchain_example.py  langgraph_example.py  langgraph_store_example.py  (+4 more)
gaugid-sdk-python/: .pre-commit-config.yaml  pyproject.toml
gaugid-sdk-typescript/: .eslintrc.json  FEATURE_PARITY.md  LICENSE  README.md  package.json  tsconfig.json
(+31 files in other folders)
